--- a/free_code_camp/Portfolio/index.html
+++ b/free_code_camp/Portfolio/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body>
+<body id="welcome-section">
     <header>
         <nav id="navbar" class="nav">
             <ul class="nav-list">
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section class="skills">
-            <h1 class="title-1" id="welcome-section">Bienvenue !</h1>
+            <h1 class="title-1">Bienvenue !</h1>
             <div class="place-bottom">
                 <div>
                     <p>Je suis actuellement en formation de <a
