--- a/free_code_camp/Portfolio/works.html
+++ b/free_code_camp/Portfolio/works.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio de Xa</title>
+    <title>Portfolio v1</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body>
+<body id="welcome-section">
     <header>
         <nav id="navbar" class="nav">
             <ul class="nav-list">
@@ -25,5 +26,137 @@
         </nav>
     </header>
     <main>
-
+        <section class="skills">
+            <h1 class="title-1">Projets découverte et exercices !</h1>
+            <p>Voici la plupart des mini-projets ou exercices que j'ai pu realiser depuis que j'ai commencé à
+                m'interresser
+                au developpement. Ce n'est qu'un debut mais j'ai pris beaucoup de plaisir à realiser chacun d'eux !</p>
+            <h2 class="title-2">Les bases du HTML 5 et CSS 3 avec FreeCodeCamp !</h2>
+            <div class="work-gallery">
+                <a href="/cafe_menu/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Cafe Menu</h2>
+                        <p>Les basics CSS</p>
+                    </div>
+                </a>
+                <a href="/basic_form/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Basic Form</h2>
+                        <p>Création d'un formulaire</p>
+                    </div>
+                </a>
+                <a href="/painting/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Modern Art</h2>
+                        <p>Utilisation de formes et de couleurs</p>
+                    </div>
+                </a>
+                <a href="/flexbox_cat/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Flexbox cats</h2>
+                        <p>Utilisation de flexbox</p>
+                    </div>
+                </a>
+                <a href="/nutrition/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Nutrition Label</h2>
+                        <p>Mise en page particulière</p>
+                    </div>
+                </a>
+                <a href="/quizz_accessibility/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Quizz Creation</h2>
+                        <p>Les bases de l'accessibilité</p>
+                    </div>
+                </a>
+                <a href="/balance_sheet/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Balance Sheet</h2>
+                        <p>Découverte des pseudo-classes</p>
+                    </div>
+                </a>
+                <a href="/cat_painting/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Cat Painting</h2>
+                        <p>CSS niveau intermediaire</p>
+                    </div>
+                </a>
+                <a href="/piano_painting_responsive/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Piano</h2>
+                        <p>Découverte du Responsive Design</p>
+                    </div>
+                </a>
+                <a href="/city_skyline/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>City Skyline</h2>
+                        <p>Découverte des variables CSS</p>
+                    </div>
+                </a>
+                <a href="/magazine_grid/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Magazine</h2>
+                        <p>Découverte du CSS Grid</p>
+                    </div>
+                </a>
+                <a href="/animation_wheel/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Ferris Wheel</h2>
+                        <p>Découverte des animations CSS</p>
+                    </div>
+                </a>
+            </div>
+        </section>
+        <section class="skills">
+            <h1 class="title-1">Mini projets !</h1>
+            <div class="work-gallery">
+                <a href="/animation_wheel/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Projet 1</h2>
+                        <p>Projet 1</p>
+                    </div>
+                </a>
+                <a href="/animation_wheel/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Projet 1</h2>
+                        <p>Projet 1</p>
+                    </div>
+                </a>
+                <a href="/animation_wheel/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Projet 1</h2>
+                        <p>Projet 1</p>
+                    </div>
+                </a>
+                <a href="/animation_wheel/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Projet 1</h2>
+                        <p>Projet 1</p>
+                    </div>
+                </a>
+                <a href="/animation_wheel/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Projet 1</h2>
+                        <p>Projet 1</p>
+                    </div>
+                </a>
+                <a href="/animation_wheel/index.html" target="_blank">
+                    <div class="work-card">
+                        <h2>Projet 1</h2>
+                        <p>Projet 1</p>
+                    </div>
+                </a>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/xavier-sarazin-36650b197" target="_blank" class="social-icon">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/XavierSARAZIN/Front-End.git" target="_blank" class="social-icon">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </footer>
+</body>
