--- a/free_code_camp/flexbox_cat/index.html
+++ b/free_code_camp/flexbox_cat/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
-    <link rel="stylesheet" href="./flexbox_chat.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
