--- a/free_code_camp/Portfolio/index.html
+++ b/free_code_camp/Portfolio/index.html
@@ -14,19 +14,26 @@
         <nav id="navbar" class="nav">
             <ul class="nav-list">
                 <li>
-                    <a href="#welcome-section">A propos</a>
+                    <a href="#welcome-section">Accueil</a>
                 </li>
                 <li>
                     <a href="works.html">Travaux</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="skills">
+            <div class="icons">
+                <i class="fab fa-html5" title="HTML5"></i>
+                <i class="fab fa-css3-alt" title="CSS3"></i>
+                <i class="fab fa-js" title="JavaScript"></i>
+                <i class="fab fa-react" title="React"></i>
+                <i class="fab fa-node-js" title="Node.js"></i>
+            </div>
             <h1 class="title-1">Bienvenue !</h1>
             <div class="place-bottom">
                 <div>
@@ -41,7 +48,7 @@
                     <p>A l'issue de cette formation, je serai capable de concevoir et développer des applications
                         adaptées
                         aux besoins des utilisateurs.</p>
-                    <h2 class="title-2">Contenu</h2>
+                    <h2 class="title-2">Programme</h2>
                     <p>Parmi les compétences techniques que je vais acquérir figurent :</p>
                     <div class="list">
                         <ul class="skills">
