--- a/free_code_camp/Portfolio/works.html
+++ b/free_code_camp/Portfolio/works.html
@@ -14,20 +14,20 @@
         <nav id="navbar" class="nav">
             <ul class="nav-list">
                 <li>
-                    <a href="index.html">A propos</a>
+                    <a href="index.html">Accueil</a>
                 </li>
                 <li>
                     <a href="works.html">Travaux</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="skills">
-            <h1 class="title-1">Projets découverte et exercices !</h1>
+            <h1 class="title-4">Projets découverte et exercices !</h1>
             <p>Voici la plupart des mini-projets ou exercices que j'ai pu realiser depuis que j'ai commencé à
                 m'interresser
                 au developpement. Ce n'est qu'un debut mais j'ai pris beaucoup de plaisir à realiser chacun d'eux !</p>
@@ -108,42 +108,42 @@
             </div>
         </section>
         <section class="skills">
-            <h1 class="title-1">Mini projets !</h1>
-            <div class="work-gallery">
+            <h1 class="title-3">Mini projets !</h1>
+            <div class="work-gallery place-bottom">
                 <a href="/animation_wheel/index.html" target="_blank">
                     <div class="work-card">
                         <h2>Projet 1</h2>
-                        <p>Projet 1</p>
+                        <p>Coming soon !</p>
                     </div>
                 </a>
                 <a href="/animation_wheel/index.html" target="_blank">
                     <div class="work-card">
-                        <h2>Projet 1</h2>
-                        <p>Projet 1</p>
+                        <h2>Projet 2</h2>
+                        <p>Coming soon !</p>
                     </div>
                 </a>
                 <a href="/animation_wheel/index.html" target="_blank">
                     <div class="work-card">
-                        <h2>Projet 1</h2>
-                        <p>Projet 1</p>
+                        <h2>Projet 3</h2>
+                        <p>Coming soon !</p>
                     </div>
                 </a>
                 <a href="/animation_wheel/index.html" target="_blank">
                     <div class="work-card">
-                        <h2>Projet 1</h2>
-                        <p>Projet 1</p>
+                        <h2>Projet 4</h2>
+                        <p>Coming soon !</p>
                     </div>
                 </a>
                 <a href="/animation_wheel/index.html" target="_blank">
                     <div class="work-card">
-                        <h2>Projet 1</h2>
-                        <p>Projet 1</p>
+                        <h2>Projet 5</h2>
+                        <p>Coming soon !</p>
                     </div>
                 </a>
                 <a href="/animation_wheel/index.html" target="_blank">
                     <div class="work-card">
-                        <h2>Projet 1</h2>
-                        <p>Projet 1</p>
+                        <h2>Projet 6</h2>
+                        <p>Coming soon !</p>
                     </div>
                 </a>
             </div>
